Fix for Login/Signup form on Safari
Fixed by applying “-webkit-user-select: none;” to everything except
inputs.

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -15,9 +15,9 @@
 	}
 }
 
-*,
-*:before,
-*:after {
+*:not(input),
+*:not(input):before,
+*:not(input):after {
 	.box-sizing(border-box);
 	-webkit-user-select: none;
 	-moz-user-select: none;
